# encode_decode_delay_measure

./: CMakeLists.txt  ReadMe.md  config.yaml  config_test.yaml  main.cpp
demo/: CMakeLists.txt  decode_new.cpp  decode_old.cpp  encode.cpp  rescale.cpp
demo/results/: ds.h264
results/: delay.txt  delay_2.txt  one.h264
utils/: CMakeLists.txt  base_delay_manager.hpp  delay_manager.cpp  delay_manager.hpp  log.hpp
